--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>rjn.create</title>
-	<link rel="stylesheet" href="../portfolio_new/stylesheet.css" />
+	<link rel="stylesheet" href="stylesheet.css" />
 </head>
 
 <body>
