Uploaded files for homepage ver. 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>rjn.create</title>
-	<link rel="stylesheet" href="stylesheet.css" />
+	<link rel="stylesheet" href="stylesheet.css" type="text/css"/>
 </head>
 
 <body>
@@ -64,6 +64,6 @@
 	
 	</div>
 	
-	<script src="../portfolio_new/main.js" ></script>
+	<script src="main.js" ></script>
 </body>
 </html>
